--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ new project.noggitproj
 noggit_mmap_filters.json
 uid.ini
 DBFilesClient/map.dbc
+world/maps/devmapa/devmapa_20_18.adt
+world/maps/devmapa/devmapa_18_18.adt
+world/maps/devmapa/devmapa_18_19.adt
+world/maps/devmapa/devmapa_19_18.adt
+world/maps/devmapa/devmapa_18_20.adt
+world/maps/devmapa/devmapa_19_19.adt
+world/maps/devmapa/devmapa_19_20.adt
+world/maps/devmapa/devmapa_20_19.adt
+world/maps/devmapa/devmapa_20_20.adt
