--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,125 @@ world/maps/devmapa/devmapa_20_19.adt
 world/maps/devmapa/devmapa_20_20.adt
 *.png
 textures/minimap/md5translate.trs
+world/maps/alphamaptestmap/alphamaptestmap_31_29.adt
+world/maps/alphamaptestmap/alphamaptestmap_31_31.adt
+world/maps/alphamaptestmap/alphamaptestmap_31_30.adt
+world/maps/alphamaptestmap/alphamaptestmap_31_28.adt
+world/maps/alphamaptestmap/alphamaptestmap_31_27.adt
+world/maps/alphamaptestmap/alphamaptestmap_31_26.adt
+world/maps/alphamaptestmap/alphamaptestmap_31_25.adt
+world/maps/alphamaptestmap/alphamaptestmap_31_24.adt
+world/maps/alphamaptestmap/alphamaptestmap_31_23.adt
+world/maps/alphamaptestmap/alphamaptestmap_31_22.adt
+world/maps/alphamaptestmap/alphamaptestmap_31_21.adt
+world/maps/alphamaptestmap/alphamaptestmap_30_31.adt
+world/maps/alphamaptestmap/alphamaptestmap_30_30.adt
+world/maps/alphamaptestmap/alphamaptestmap_30_29.adt
+world/maps/alphamaptestmap/alphamaptestmap_30_28.adt
+world/maps/alphamaptestmap/alphamaptestmap_30_27.adt
+world/maps/alphamaptestmap/alphamaptestmap_30_26.adt
+world/maps/alphamaptestmap/alphamaptestmap_30_25.adt
+world/maps/alphamaptestmap/alphamaptestmap_30_24.adt
+world/maps/alphamaptestmap/alphamaptestmap_30_23.adt
+world/maps/alphamaptestmap/alphamaptestmap_30_22.adt
+world/maps/alphamaptestmap/alphamaptestmap_30_21.adt
+world/maps/alphamaptestmap/alphamaptestmap_29_31.adt
+world/maps/alphamaptestmap/alphamaptestmap_29_30.adt
+world/maps/alphamaptestmap/alphamaptestmap_29_29.adt
+world/maps/alphamaptestmap/alphamaptestmap_29_28.adt
+world/maps/alphamaptestmap/alphamaptestmap_29_27.adt
+world/maps/alphamaptestmap/alphamaptestmap_29_26.adt
+world/maps/alphamaptestmap/alphamaptestmap_29_25.adt
+world/maps/alphamaptestmap/alphamaptestmap_29_24.adt
+world/maps/alphamaptestmap/alphamaptestmap_29_23.adt
+world/maps/alphamaptestmap/alphamaptestmap_29_22.adt
+world/maps/alphamaptestmap/alphamaptestmap_29_21.adt
+world/maps/alphamaptestmap/alphamaptestmap_28_31.adt
+world/maps/alphamaptestmap/alphamaptestmap_28_30.adt
+world/maps/alphamaptestmap/alphamaptestmap_28_29.adt
+world/maps/alphamaptestmap/alphamaptestmap_28_28.adt
+world/maps/alphamaptestmap/alphamaptestmap_28_27.adt
+world/maps/alphamaptestmap/alphamaptestmap_28_26.adt
+world/maps/alphamaptestmap/alphamaptestmap_28_25.adt
+world/maps/alphamaptestmap/alphamaptestmap_28_24.adt
+world/maps/alphamaptestmap/alphamaptestmap_28_23.adt
+world/maps/alphamaptestmap/alphamaptestmap_28_22.adt
+world/maps/alphamaptestmap/alphamaptestmap_28_21.adt
+world/maps/alphamaptestmap/alphamaptestmap_27_31.adt
+world/maps/alphamaptestmap/alphamaptestmap_27_30.adt
+world/maps/alphamaptestmap/alphamaptestmap_27_29.adt
+world/maps/alphamaptestmap/alphamaptestmap_27_28.adt
+world/maps/alphamaptestmap/alphamaptestmap_27_27.adt
+world/maps/alphamaptestmap/alphamaptestmap_27_26.adt
+world/maps/alphamaptestmap/alphamaptestmap_27_25.adt
+world/maps/alphamaptestmap/alphamaptestmap_27_24.adt
+world/maps/alphamaptestmap/alphamaptestmap_27_23.adt
+world/maps/alphamaptestmap/alphamaptestmap_27_22.adt
+world/maps/alphamaptestmap/alphamaptestmap_27_21.adt
+world/maps/alphamaptestmap/alphamaptestmap_26_31.adt
+world/maps/alphamaptestmap/alphamaptestmap_26_30.adt
+world/maps/alphamaptestmap/alphamaptestmap_26_29.adt
+world/maps/alphamaptestmap/alphamaptestmap_26_28.adt
+world/maps/alphamaptestmap/alphamaptestmap_26_27.adt
+world/maps/alphamaptestmap/alphamaptestmap_26_26.adt
+world/maps/alphamaptestmap/alphamaptestmap_26_25.adt
+world/maps/alphamaptestmap/alphamaptestmap_26_24.adt
+world/maps/alphamaptestmap/alphamaptestmap_26_23.adt
+world/maps/alphamaptestmap/alphamaptestmap_26_22.adt
+world/maps/alphamaptestmap/alphamaptestmap_26_21.adt
+world/maps/alphamaptestmap/alphamaptestmap_25_31.adt
+world/maps/alphamaptestmap/alphamaptestmap_25_30.adt
+world/maps/alphamaptestmap/alphamaptestmap_25_29.adt
+world/maps/alphamaptestmap/alphamaptestmap_25_28.adt
+world/maps/alphamaptestmap/alphamaptestmap_25_27.adt
+world/maps/alphamaptestmap/alphamaptestmap_25_26.adt
+world/maps/alphamaptestmap/alphamaptestmap_25_25.adt
+world/maps/alphamaptestmap/alphamaptestmap_25_24.adt
+world/maps/alphamaptestmap/alphamaptestmap_25_23.adt
+world/maps/alphamaptestmap/alphamaptestmap_25_22.adt
+world/maps/alphamaptestmap/alphamaptestmap_25_21.adt
+world/maps/alphamaptestmap/alphamaptestmap_24_31.adt
+world/maps/alphamaptestmap/alphamaptestmap_24_30.adt
+world/maps/alphamaptestmap/alphamaptestmap_24_29.adt
+world/maps/alphamaptestmap/alphamaptestmap_24_28.adt
+world/maps/alphamaptestmap/alphamaptestmap_24_27.adt
+world/maps/alphamaptestmap/alphamaptestmap_24_26.adt
+world/maps/alphamaptestmap/alphamaptestmap_24_25.adt
+world/maps/alphamaptestmap/alphamaptestmap_24_24.adt
+world/maps/alphamaptestmap/alphamaptestmap_24_23.adt
+world/maps/alphamaptestmap/alphamaptestmap_24_22.adt
+world/maps/alphamaptestmap/alphamaptestmap_24_21.adt
+world/maps/alphamaptestmap/alphamaptestmap_23_31.adt
+world/maps/alphamaptestmap/alphamaptestmap_23_30.adt
+world/maps/alphamaptestmap/alphamaptestmap_23_29.adt
+world/maps/alphamaptestmap/alphamaptestmap_23_28.adt
+world/maps/alphamaptestmap/alphamaptestmap_23_27.adt
+world/maps/alphamaptestmap/alphamaptestmap_23_26.adt
+world/maps/alphamaptestmap/alphamaptestmap_23_25.adt
+world/maps/alphamaptestmap/alphamaptestmap_23_24.adt
+world/maps/alphamaptestmap/alphamaptestmap_23_23.adt
+world/maps/alphamaptestmap/alphamaptestmap_23_22.adt
+world/maps/alphamaptestmap/alphamaptestmap_23_21.adt
+world/maps/alphamaptestmap/alphamaptestmap_22_31.adt
+world/maps/alphamaptestmap/alphamaptestmap_22_30.adt
+world/maps/alphamaptestmap/alphamaptestmap_22_29.adt
+world/maps/alphamaptestmap/alphamaptestmap_22_28.adt
+world/maps/alphamaptestmap/alphamaptestmap_22_27.adt
+world/maps/alphamaptestmap/alphamaptestmap_22_26.adt
+world/maps/alphamaptestmap/alphamaptestmap_22_25.adt
+world/maps/alphamaptestmap/alphamaptestmap_22_24.adt
+world/maps/alphamaptestmap/alphamaptestmap_22_23.adt
+world/maps/alphamaptestmap/alphamaptestmap_22_22.adt
+world/maps/alphamaptestmap/alphamaptestmap_22_21.adt
+world/maps/alphamaptestmap/alphamaptestmap_21_31.adt
+world/maps/alphamaptestmap/alphamaptestmap_21_30.adt
+world/maps/alphamaptestmap/alphamaptestmap_21_29.adt
+world/maps/alphamaptestmap/alphamaptestmap_21_28.adt
+world/maps/alphamaptestmap/alphamaptestmap_21_27.adt
+world/maps/alphamaptestmap/alphamaptestmap_21_26.adt
+world/maps/alphamaptestmap/alphamaptestmap_21_25.adt
+world/maps/alphamaptestmap/alphamaptestmap_21_24.adt
+world/maps/alphamaptestmap/alphamaptestmap_21_23.adt
+world/maps/alphamaptestmap/alphamaptestmap_21_22.adt
+world/maps/alphamaptestmap/alphamaptestmap_21_21.adt
+world/maps/alphamaptestmap/alphamaptestmap.wdt
