was gonna add reference ADTs but it decided yeah no

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,38 @@ world/maps/alphamaptestmap/alphamaptestmap_21_23.adt
 world/maps/alphamaptestmap/alphamaptestmap_21_22.adt
 world/maps/alphamaptestmap/alphamaptestmap_21_21.adt
 world/maps/alphamaptestmap/alphamaptestmap.wdt
+world/maps/108/108_33_27.adt
+world/maps/108/108_33_26.adt
+world/maps/108/108_33_25.adt
+world/maps/108/108_33_24.adt
+world/maps/108/108_32_28.adt
+world/maps/108/108_32_27.adt
+world/maps/108/108_32_26.adt
+world/maps/108/108_32_25.adt
+world/maps/108/108_32_24.adt
+world/maps/108/108_32_23.adt
+world/maps/108/108_31_28.adt
+world/maps/108/108_31_27.adt
+world/maps/108/108_31_26.adt
+world/maps/108/108_31_25.adt
+world/maps/108/108_31_24.adt
+world/maps/108/108_31_23.adt
+world/maps/108/108_30_27.adt
+world/maps/108/108_30_26.adt
+world/maps/108/108_30_25.adt
+world/maps/108/108_30_24.adt
+world/maps/108/108_30_23.adt
+world/maps/108/108_29_27.adt
+world/maps/108/108_29_26.adt
+world/maps/108/108_29_25.adt
+world/maps/108/108_29_24.adt
+world/maps/108/108_29_23.adt
+world/maps/108/108_28_27.adt
+world/maps/108/108_28_26.adt
+world/maps/108/108_28_25.adt
+world/maps/108/108_28_24.adt
+world/maps/108/108_28_23.adt
+world/maps/108/108_27_27.adt
+world/maps/108/108_27_25.adt
+world/maps/108/108_27_24.adt
+world/maps/108/108_27_23.adt
