--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,41 @@ world/maps/108/108_27_27.adt
 world/maps/108/108_27_25.adt
 world/maps/108/108_27_24.adt
 world/maps/108/108_27_23.adt
+uid.ini
+world/maps/model_test/model_test.wdt
+world/maps/model_test/model_test_10_10.adt
+world/maps/model_test/model_test_10_11.adt
+world/maps/model_test/model_test_10_12.adt
+world/maps/model_test/model_test_10_13.adt
+world/maps/model_test/model_test_10_8.adt
+world/maps/model_test/model_test_10_9.adt
+world/maps/model_test/model_test_11_10.adt
+world/maps/model_test/model_test_11_11.adt
+world/maps/model_test/model_test_11_12.adt
+world/maps/model_test/model_test_11_13.adt
+world/maps/model_test/model_test_11_8.adt
+world/maps/model_test/model_test_11_9.adt
+world/maps/model_test/model_test_12_10.adt
+world/maps/model_test/model_test_12_11.adt
+world/maps/model_test/model_test_12_12.adt
+world/maps/model_test/model_test_12_13.adt
+world/maps/model_test/model_test_12_8.adt
+world/maps/model_test/model_test_12_9.adt
+world/maps/model_test/model_test_7_10.adt
+world/maps/model_test/model_test_7_11.adt
+world/maps/model_test/model_test_7_12.adt
+world/maps/model_test/model_test_7_13.adt
+world/maps/model_test/model_test_7_8.adt
+world/maps/model_test/model_test_7_9.adt
+world/maps/model_test/model_test_8_10.adt
+world/maps/model_test/model_test_8_11.adt
+world/maps/model_test/model_test_8_12.adt
+world/maps/model_test/model_test_8_13.adt
+world/maps/model_test/model_test_8_8.adt
+world/maps/model_test/model_test_8_9.adt
+world/maps/model_test/model_test_9_10.adt
+world/maps/model_test/model_test_9_11.adt
+world/maps/model_test/model_test_9_12.adt
+world/maps/model_test/model_test_9_13.adt
+world/maps/model_test/model_test_9_8.adt
+world/maps/model_test/model_test_9_9.adt
