udpate uid.ini and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1342,3 +1342,7 @@ world/maps/test/test_38_34.adt
 world/maps/test/test_38_35.adt
 world/maps/test/test_38_36.adt
 world/maps/test/test_38_37.adt
+world/maps/108/108_25_31.adt
+world/maps/108/108_25_33.adt
+world/maps/108/108_29_31.adt
+world/maps/108/108_26_34.adt
