Push additional changes to Zarkeven/Thaldranath

--- a/.gitignore
+++ b/.gitignore
@@ -1348,3 +1348,20 @@ world/maps/108/108_26_34.adt
 !textures/minimap/tdtest_combined_minimap.png
 *.noggitproj
 General modding.noggitproj
+world/maps/hawaiimainland/hawaiimainland.wdt
+world/maps/hawaiimainland/hawaiimainland_40_31.adt
+world/maps/hawaiimainland/hawaiimainland_40_32.adt
+world/maps/hawaiimainland/hawaiimainland_40_33.adt
+world/maps/hawaiimainland/hawaiimainland_40_34.adt
+world/maps/hawaiimainland/hawaiimainland_41_31.adt
+world/maps/hawaiimainland/hawaiimainland_41_32.adt
+world/maps/hawaiimainland/hawaiimainland_41_33.adt
+world/maps/hawaiimainland/hawaiimainland_41_34.adt
+world/maps/hawaiimainland/hawaiimainland_42_31.adt
+world/maps/hawaiimainland/hawaiimainland_42_32.adt
+world/maps/hawaiimainland/hawaiimainland_42_33.adt
+world/maps/hawaiimainland/hawaiimainland_42_34.adt
+world/maps/hawaiimainland/hawaiimainland_43_31.adt
+world/maps/hawaiimainland/hawaiimainland_43_32.adt
+world/maps/hawaiimainland/hawaiimainland_43_33.adt
+world/maps/hawaiimainland/hawaiimainland_43_34.adt
