random changes ive made

--- a/.gitignore
+++ b/.gitignore
@@ -1365,3 +1365,308 @@ world/maps/hawaiimainland/hawaiimainland_43_31.adt
 world/maps/hawaiimainland/hawaiimainland_43_32.adt
 world/maps/hawaiimainland/hawaiimainland_43_33.adt
 world/maps/hawaiimainland/hawaiimainland_43_34.adt
+TextureSettings.json
+world/maps/programmap/programmap.wdl
+world/maps/programmap/programmap.wdt
+world/maps/programmap/programmap_15_19.adt
+world/maps/programmap/programmap_15_20.adt
+world/maps/programmap/programmap_15_21.adt
+world/maps/programmap/programmap_15_22.adt
+world/maps/programmap/programmap_15_23.adt
+world/maps/programmap/programmap_15_24.adt
+world/maps/programmap/programmap_15_25.adt
+world/maps/programmap/programmap_15_26.adt
+world/maps/programmap/programmap_15_27.adt
+world/maps/programmap/programmap_15_28.adt
+world/maps/programmap/programmap_15_29.adt
+world/maps/programmap/programmap_15_30.adt
+world/maps/programmap/programmap_15_31.adt
+world/maps/programmap/programmap_16_19.adt
+world/maps/programmap/programmap_16_20.adt
+world/maps/programmap/programmap_16_21.adt
+world/maps/programmap/programmap_16_22.adt
+world/maps/programmap/programmap_16_23.adt
+world/maps/programmap/programmap_16_24.adt
+world/maps/programmap/programmap_16_25.adt
+world/maps/programmap/programmap_16_26.adt
+world/maps/programmap/programmap_16_27.adt
+world/maps/programmap/programmap_16_28.adt
+world/maps/programmap/programmap_16_29.adt
+world/maps/programmap/programmap_16_30.adt
+world/maps/programmap/programmap_16_31.adt
+world/maps/programmap/programmap_17_19.adt
+world/maps/programmap/programmap_17_20.adt
+world/maps/programmap/programmap_17_21.adt
+world/maps/programmap/programmap_17_22.adt
+world/maps/programmap/programmap_17_23.adt
+world/maps/programmap/programmap_17_24.adt
+world/maps/programmap/programmap_17_25.adt
+world/maps/programmap/programmap_17_26.adt
+world/maps/programmap/programmap_17_27.adt
+world/maps/programmap/programmap_17_28.adt
+world/maps/programmap/programmap_17_29.adt
+world/maps/programmap/programmap_17_30.adt
+world/maps/programmap/programmap_17_31.adt
+world/maps/programmap/programmap_18_19.adt
+world/maps/programmap/programmap_18_20.adt
+world/maps/programmap/programmap_18_21.adt
+world/maps/programmap/programmap_18_22.adt
+world/maps/programmap/programmap_18_23.adt
+world/maps/programmap/programmap_18_24.adt
+world/maps/programmap/programmap_18_25.adt
+world/maps/programmap/programmap_18_26.adt
+world/maps/programmap/programmap_18_27.adt
+world/maps/programmap/programmap_18_28.adt
+world/maps/programmap/programmap_18_29.adt
+world/maps/programmap/programmap_18_30.adt
+world/maps/programmap/programmap_18_31.adt
+world/maps/programmap/programmap_19_19.adt
+world/maps/programmap/programmap_19_20.adt
+world/maps/programmap/programmap_19_21.adt
+world/maps/programmap/programmap_19_22.adt
+world/maps/programmap/programmap_19_23.adt
+world/maps/programmap/programmap_19_24.adt
+world/maps/programmap/programmap_19_25.adt
+world/maps/programmap/programmap_19_26.adt
+world/maps/programmap/programmap_19_27.adt
+world/maps/programmap/programmap_19_28.adt
+world/maps/programmap/programmap_19_29.adt
+world/maps/programmap/programmap_19_30.adt
+world/maps/programmap/programmap_19_31.adt
+world/maps/programmap/programmap_20_19.adt
+world/maps/programmap/programmap_20_20.adt
+world/maps/programmap/programmap_20_21.adt
+world/maps/programmap/programmap_20_22.adt
+world/maps/programmap/programmap_20_23.adt
+world/maps/programmap/programmap_20_24.adt
+world/maps/programmap/programmap_20_25.adt
+world/maps/programmap/programmap_20_26.adt
+world/maps/programmap/programmap_20_27.adt
+world/maps/programmap/programmap_20_28.adt
+world/maps/programmap/programmap_20_29.adt
+world/maps/programmap/programmap_20_30.adt
+world/maps/programmap/programmap_20_31.adt
+world/maps/programmap/programmap_21_19.adt
+world/maps/programmap/programmap_21_20.adt
+world/maps/programmap/programmap_21_21.adt
+world/maps/programmap/programmap_21_22.adt
+world/maps/programmap/programmap_21_23.adt
+world/maps/programmap/programmap_21_24.adt
+world/maps/programmap/programmap_21_25.adt
+world/maps/programmap/programmap_21_26.adt
+world/maps/programmap/programmap_21_27.adt
+world/maps/programmap/programmap_21_28.adt
+world/maps/programmap/programmap_21_29.adt
+world/maps/programmap/programmap_21_30.adt
+world/maps/programmap/programmap_21_31.adt
+world/maps/programmap/programmap_22_19.adt
+world/maps/programmap/programmap_22_20.adt
+world/maps/programmap/programmap_22_21.adt
+world/maps/programmap/programmap_22_22.adt
+world/maps/programmap/programmap_22_23.adt
+world/maps/programmap/programmap_22_24.adt
+world/maps/programmap/programmap_22_25.adt
+world/maps/programmap/programmap_22_26.adt
+world/maps/programmap/programmap_22_27.adt
+world/maps/programmap/programmap_22_28.adt
+world/maps/programmap/programmap_22_29.adt
+world/maps/programmap/programmap_22_30.adt
+world/maps/programmap/programmap_22_31.adt
+world/maps/programmap/programmap_23_19.adt
+world/maps/programmap/programmap_23_20.adt
+world/maps/programmap/programmap_23_21.adt
+world/maps/programmap/programmap_23_22.adt
+world/maps/programmap/programmap_23_23.adt
+world/maps/programmap/programmap_23_24.adt
+world/maps/programmap/programmap_23_25.adt
+world/maps/programmap/programmap_23_26.adt
+world/maps/programmap/programmap_23_27.adt
+world/maps/programmap/programmap_23_28.adt
+world/maps/programmap/programmap_23_29.adt
+world/maps/programmap/programmap_23_30.adt
+world/maps/programmap/programmap_23_31.adt
+world/maps/programmap/programmap_24_19.adt
+world/maps/programmap/programmap_24_20.adt
+world/maps/programmap/programmap_24_21.adt
+world/maps/programmap/programmap_24_22.adt
+world/maps/programmap/programmap_24_23.adt
+world/maps/programmap/programmap_24_24.adt
+world/maps/programmap/programmap_24_25.adt
+world/maps/programmap/programmap_24_26.adt
+world/maps/programmap/programmap_24_27.adt
+world/maps/programmap/programmap_24_28.adt
+world/maps/programmap/programmap_24_29.adt
+world/maps/programmap/programmap_24_30.adt
+world/maps/programmap/programmap_24_31.adt
+world/maps/programmap/programmap_25_19.adt
+world/maps/programmap/programmap_25_20.adt
+world/maps/programmap/programmap_25_21.adt
+world/maps/programmap/programmap_25_22.adt
+world/maps/programmap/programmap_25_23.adt
+world/maps/programmap/programmap_25_24.adt
+world/maps/programmap/programmap_25_25.adt
+world/maps/programmap/programmap_25_26.adt
+world/maps/programmap/programmap_25_27.adt
+world/maps/programmap/programmap_25_28.adt
+world/maps/programmap/programmap_25_29.adt
+world/maps/programmap/programmap_25_30.adt
+world/maps/programmap/programmap_25_31.adt
+world/maps/programmap/programmap_26_19.adt
+world/maps/programmap/programmap_26_20.adt
+world/maps/programmap/programmap_26_21.adt
+world/maps/programmap/programmap_26_22.adt
+world/maps/programmap/programmap_26_23.adt
+world/maps/programmap/programmap_26_24.adt
+world/maps/programmap/programmap_26_25.adt
+world/maps/programmap/programmap_26_26.adt
+world/maps/programmap/programmap_26_27.adt
+world/maps/programmap/programmap_26_28.adt
+world/maps/programmap/programmap_26_29.adt
+world/maps/programmap/programmap_26_30.adt
+world/maps/programmap/programmap_26_31.adt
+world/maps/programmap/programmap_27_19.adt
+world/maps/programmap/programmap_27_20.adt
+world/maps/programmap/programmap_27_21.adt
+world/maps/programmap/programmap_27_22.adt
+world/maps/programmap/programmap_27_23.adt
+world/maps/programmap/programmap_27_24.adt
+world/maps/programmap/programmap_27_25.adt
+world/maps/programmap/programmap_27_26.adt
+world/maps/programmap/programmap_27_27.adt
+world/maps/programmap/programmap_27_28.adt
+world/maps/programmap/programmap_27_29.adt
+world/maps/programmap/programmap_27_30.adt
+world/maps/programmap/programmap_27_31.adt
+world/maps/programmap/programmap_28_19.adt
+world/maps/programmap/programmap_28_20.adt
+world/maps/programmap/programmap_28_21.adt
+world/maps/programmap/programmap_28_22.adt
+world/maps/programmap/programmap_28_23.adt
+world/maps/programmap/programmap_28_24.adt
+world/maps/programmap/programmap_28_25.adt
+world/maps/programmap/programmap_28_26.adt
+world/maps/programmap/programmap_28_27.adt
+world/maps/programmap/programmap_28_28.adt
+world/maps/programmap/programmap_28_29.adt
+world/maps/programmap/programmap_28_30.adt
+world/maps/programmap/programmap_28_31.adt
+world/maps/programmap/programmap_29_19.adt
+world/maps/programmap/programmap_29_20.adt
+world/maps/programmap/programmap_29_21.adt
+world/maps/programmap/programmap_29_22.adt
+world/maps/programmap/programmap_29_23.adt
+world/maps/programmap/programmap_29_24.adt
+world/maps/programmap/programmap_29_25.adt
+world/maps/programmap/programmap_29_26.adt
+world/maps/programmap/programmap_29_27.adt
+world/maps/programmap/programmap_29_28.adt
+world/maps/programmap/programmap_29_29.adt
+world/maps/programmap/programmap_29_30.adt
+world/maps/programmap/programmap_29_31.adt
+world/maps/programmap/programmap_30_19.adt
+world/maps/programmap/programmap_30_20.adt
+world/maps/programmap/programmap_30_21.adt
+world/maps/programmap/programmap_30_22.adt
+world/maps/programmap/programmap_30_23.adt
+world/maps/programmap/programmap_30_24.adt
+world/maps/programmap/programmap_30_25.adt
+world/maps/programmap/programmap_30_26.adt
+world/maps/programmap/programmap_30_27.adt
+world/maps/programmap/programmap_30_28.adt
+world/maps/programmap/programmap_30_29.adt
+world/maps/programmap/programmap_30_30.adt
+world/maps/programmap/programmap_30_31.adt
+world/maps/testmap100/testmap100.wdl
+world/maps/testmap100/testmap100.wdt
+world/maps/testmap100/testmap100_21_18.adt
+world/maps/testmap100/testmap100_21_19.adt
+world/maps/testmap100/testmap100_21_20.adt
+world/maps/testmap100/testmap100_21_21.adt
+world/maps/testmap100/testmap100_21_22.adt
+world/maps/testmap100/testmap100_21_23.adt
+world/maps/testmap100/testmap100_22_18.adt
+world/maps/testmap100/testmap100_22_19.adt
+world/maps/testmap100/testmap100_22_20.adt
+world/maps/testmap100/testmap100_22_21.adt
+world/maps/testmap100/testmap100_22_22.adt
+world/maps/testmap100/testmap100_22_23.adt
+world/maps/testmap100/testmap100_23_18.adt
+world/maps/testmap100/testmap100_23_19.adt
+world/maps/testmap100/testmap100_23_20.adt
+world/maps/testmap100/testmap100_23_21.adt
+world/maps/testmap100/testmap100_23_22.adt
+world/maps/testmap100/testmap100_23_23.adt
+world/maps/testmap100/testmap100_24_18.adt
+world/maps/testmap100/testmap100_24_19.adt
+world/maps/testmap100/testmap100_24_20.adt
+world/maps/testmap100/testmap100_24_21.adt
+world/maps/testmap100/testmap100_24_22.adt
+world/maps/testmap100/testmap100_24_23.adt
+world/maps/testmap100/testmap100_25_18.adt
+world/maps/testmap100/testmap100_25_19.adt
+world/maps/testmap100/testmap100_25_20.adt
+world/maps/testmap100/testmap100_25_21.adt
+world/maps/testmap100/testmap100_25_22.adt
+world/maps/testmap100/testmap100_25_23.adt
+world/maps/testmap100/testmap100_26_18.adt
+world/maps/testmap100/testmap100_26_19.adt
+world/maps/testmap100/testmap100_26_20.adt
+world/maps/testmap100/testmap100_26_21.adt
+world/maps/testmap100/testmap100_26_22.adt
+world/maps/testmap100/testmap100_26_23.adt
+world/maps/texturetest/texturetest.wdl
+world/maps/texturetest/texturetest.wdt
+world/maps/texturetest/texturetest_23_17.adt
+world/maps/texturetest/texturetest_23_18.adt
+world/maps/texturetest/texturetest_23_19.adt
+world/maps/texturetest/texturetest_23_20.adt
+world/maps/texturetest/texturetest_23_21.adt
+world/maps/texturetest/texturetest_23_22.adt
+world/maps/texturetest/texturetest_24_17.adt
+world/maps/texturetest/texturetest_24_18.adt
+world/maps/texturetest/texturetest_24_19.adt
+world/maps/texturetest/texturetest_24_20.adt
+world/maps/texturetest/texturetest_24_21.adt
+world/maps/texturetest/texturetest_24_22.adt
+world/maps/texturetest/texturetest_25_17.adt
+world/maps/texturetest/texturetest_25_18.adt
+world/maps/texturetest/texturetest_25_19.adt
+world/maps/texturetest/texturetest_25_20.adt
+world/maps/texturetest/texturetest_25_21.adt
+world/maps/texturetest/texturetest_25_22.adt
+world/maps/texturetest/texturetest_26_17.adt
+world/maps/texturetest/texturetest_26_18.adt
+world/maps/texturetest/texturetest_26_19.adt
+world/maps/texturetest/texturetest_26_20.adt
+world/maps/texturetest/texturetest_26_21.adt
+world/maps/texturetest/texturetest_26_22.adt
+world/maps/texturetest/texturetest_27_17.adt
+world/maps/texturetest/texturetest_27_18.adt
+world/maps/texturetest/texturetest_27_19.adt
+world/maps/texturetest/texturetest_27_20.adt
+world/maps/texturetest/texturetest_27_21.adt
+world/maps/texturetest/texturetest_27_22.adt
+world/maps/texturetest/texturetest_28_17.adt
+world/maps/texturetest/texturetest_28_18.adt
+world/maps/texturetest/texturetest_28_19.adt
+world/maps/texturetest/texturetest_28_20.adt
+world/maps/texturetest/texturetest_28_21.adt
+world/maps/texturetest/texturetest_28_22.adt
+world/maps/texturetest/texturetest_29_17.adt
+world/maps/texturetest/texturetest_29_18.adt
+world/maps/texturetest/texturetest_29_19.adt
+world/maps/texturetest/texturetest_29_20.adt
+world/maps/texturetest/texturetest_29_21.adt
+world/maps/texturetest/texturetest_29_22.adt
+world/maps/texturetest/texturetest_30_17.adt
+world/maps/texturetest/texturetest_30_18.adt
+world/maps/texturetest/texturetest_30_19.adt
+world/maps/texturetest/texturetest_30_20.adt
+world/maps/texturetest/texturetest_30_21.adt
+world/maps/texturetest/texturetest_30_22.adt
+world/maps/texturetest/texturetest_31_17.adt
+world/maps/texturetest/texturetest_31_18.adt
+world/maps/texturetest/texturetest_31_19.adt
+world/maps/texturetest/texturetest_31_20.adt
+world/maps/texturetest/texturetest_31_21.adt
+world/maps/texturetest/texturetest_31_22.adt
