--- a/extraData/global.cfg
+++ b/extraData/global.cfg
@@ -5678,5 +5678,15 @@
     "Scale": 1,
     "HeightScale": 6,
     "HeightOffset": 1
-  }
+  },
+    "tileset/expansion06/suramar/7sr_grassdead03_1024.blp": {
+    "Scale": 2,
+    "HeightScale": 8,
+    "HeightOffset": 1
+    },
+    "tileset/expansion06/suramar/7sr_grassdead01_512.blp": {
+    "Scale": 1,
+    "HeightScale": 8,
+    "HeightOffset": 1
+    }
 }
