--- a/.gitignore
+++ b/.gitignore
@@ -2596,3 +2596,12 @@ textures/minimap/2175_30_9.png
 textures/minimap/2175_31_10.blp
 textures/minimap/2175_31_10.png
 textures/minimap/2175_43_37.blp
+world/maps/2484/2484.wdl
+world/maps/2484/2484_23_21.adt
+world/maps/2484/2484_24_21.adt
+world/maps/2484/2484_24_22.adt
+world/maps/2484/2484_25_21.adt
+world/maps/2484/2484_25_22.adt
+world/maps/2484/2484_26_22.adt
+world/maps/2484/2484_26_23.adt
+world/maps/2484/2484_27_19.adt
